--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,20 @@
 spring.application.name=suffra
 
-spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br/ORCL
-spring.datasource.username=rm553481
-spring.datasource.password=021004
+#oracle
+#spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br/ORCL
+#spring.datasource.username=rm553481
+#spring.datasource.password=021004
 #spring.datasource.username=rm553362
 #spring.datasource.password=021096
+#spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
+#spring.jpa.hibernate.ddl-auto=create
 
-spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
-spring.jpa.hibernate.ddl-auto=create
+#H2
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.h2.console.path=/h2-console
